Modify '**CMakeLists.txt' to insert '"'
Signed-off-by: William So <polyipseity@gmail.com>

--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 project(artccel-core VERSION 1.0.0 LANGUAGES C CXX)
 
-add_library(artccel-core SHARED src/placeholder.cpp)
-configure_file(in/config.h include/artccel-core/config.h)
+add_library(artccel-core SHARED "src/placeholder.cpp")
+configure_file("in/config.h" "include/artccel-core/config.h")
 target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
 target_link_libraries(artccel-core artccel)
 
-add_executable(artccel-core-exe src/exe/main.cpp)
+add_executable(artccel-core-exe "src/exe/main.cpp")
 target_link_libraries(artccel-core-exe artccel-core)
 
 include(GNUInstallDirs)
