--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
 project(artccel-core VERSION 1.0.0 LANGUAGES C CXX)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 add_library(artccel-core SHARED "src/placeholder.cpp")
 configure_file("in/config.h" "include/artccel-core/config.h")
 target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
-target_link_libraries(artccel-core artccel)
+target_link_libraries(artccel-core PUBLIC artccel PRIVATE Microsoft.GSL::GSL)
 
 add_executable(artccel-core-exe "src/exe/main.cpp")
 target_link_libraries(artccel-core-exe artccel-core)
