--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,8 @@
 		"iostream": "cpp",
 		"span_ext": "cpp",
 		"gsl": "cpp",
-		"cuchar": "cpp"
+		"cuchar": "cpp",
+		"codecvt": "cpp",
+		"ctime": "cpp"
 	}
 }
