--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 set(CMAKE_CXX_CLANG_TIDY clang-tidy "--config-file=${PROJECT_SOURCE_DIR}/.clang-tidy")
 
+set(THREADS_PREFER_PTHREAD_FLAG true)
+find_package(Threads REQUIRED)
 find_package(Microsoft.GSL 4.0.0 EXACT REQUIRED CONFIG)
 
 add_library(artccel INTERFACE)
