Reduce code duplication in '**CMakeLists.txt'
Signed-off-by: William So <polyipseity@gmail.com>

--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -1,15 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(artccel-core VERSION 1.0.0 LANGUAGES C CXX)
+set(ROOT_DIR "${PROJECT_SOURCE_DIR}/../")
 
-set(CMAKE_C_STANDARD 17)
-set(CMAKE_C_STANDARD_REQUIRED true)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED true)
-
-# Workaround: Make clang-tidy include non-default system headers
-set(CMAKE_EXPORT_COMPILE_COMMANDS true)
-set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES} ${CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES})
-set(CMAKE_CXX_CLANG_TIDY clang-tidy -p "${CMAKE_BINARY_DIR}/compile_commands.json" "--config-file=${PROJECT_SOURCE_DIR}/../.clang-tidy")
+include("${ROOT_DIR}/build_auto/init.cmake")
 
 add_library(artccel-core SHARED
 	"sources/encoding.cpp")
