--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 project(artccel VERSION 1.0.0 LANGUAGES C CXX)
+set(ROOT_DIR "${PROJECT_SOURCE_DIR}/")
+
+include("${ROOT_DIR}/build_auto/init.cmake")
 
 set(THREADS_PREFER_PTHREAD_FLAG true)
 find_package(Threads REQUIRED)
 find_package(Microsoft.GSL 4.0.0 EXACT REQUIRED CONFIG)
-
-set(CMAKE_C_STANDARD 17)
-set(CMAKE_C_STANDARD_REQUIRED true)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED true)
-
-# Workaround: Make clang-tidy include non-default system headers
-set(CMAKE_EXPORT_COMPILE_COMMANDS true)
-set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES} ${CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES})
-set(CMAKE_CXX_CLANG_TIDY clang-tidy -p "${CMAKE_BINARY_DIR}/compile_commands.json" "--config-file=${PROJECT_SOURCE_DIR}/.clang-tidy")
 
 add_library(artccel INTERFACE)
 configure_file("in/config.h" "include/artccel/config.h")
