--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -5,7 +5,8 @@ set(ROOT_DIR "${PROJECT_SOURCE_DIR}/../")
 include("${ROOT_DIR}/build_auto/init.cmake")
 
 add_library(artccel-core SHARED
-	"sources/encoding.cpp")
+	"sources/encoding.cpp"
+	"sources/template_instantiations.cpp")
 configure_file("in/config.h" "include/artccel-core/config.h")
 target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
 target_link_libraries(artccel-core PUBLIC artccel PRIVATE Threads::Threads Microsoft.GSL::GSL)
