Modify the build automation
- Suppress C4068 for MSVC.
- Generate 'export.h' for 'artccel-core' to properly export DLL symbols.
- Set 'CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS' to true to export all symbols.
- Include generated headers as system headers to suppress warnings.

Signed-off-by: William So <polyipseity@gmail.com>

--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -11,8 +11,10 @@ add_library(artccel-core SHARED
 	"sources/main_hooks.cpp"
 	"sources/template_instantiations.cpp")
 configure_file("in/config.h" "include/artccel-core/config.h")
-target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
-target_link_libraries(artccel-core PUBLIC artccel PRIVATE Threads::Threads Microsoft.GSL::GSL)
+generate_preset_export_header(artccel-core)
+target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
+target_include_directories(artccel-core SYSTEM PUBLIC $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>)
+target_link_libraries(artccel-core PUBLIC artccel Microsoft.GSL::GSL PRIVATE Threads::Threads)
 
 add_executable(artccel-core-exe "sources/exe/main.cpp")
 target_link_libraries(artccel-core-exe artccel-core)
