--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,28 @@
 		"shared_mutex": "cpp",
 		"source_location": "cpp",
 		"numbers": "cpp",
-		"semaphore": "cpp"
+		"semaphore": "cpp",
+		"xstring": "cpp",
+		"xutility": "cpp",
+		"charconv": "cpp",
+		"forward_list": "cpp",
+		"list": "cpp",
+		"map": "cpp",
+		"format": "cpp",
+		"ios": "cpp",
+		"xfacet": "cpp",
+		"xhash": "cpp",
+		"xiosbase": "cpp",
+		"xlocale": "cpp",
+		"xlocbuf": "cpp",
+		"xlocinfo": "cpp",
+		"xlocmes": "cpp",
+		"xlocmon": "cpp",
+		"xlocnum": "cpp",
+		"xloctime": "cpp",
+		"xmemory": "cpp",
+		"xstddef": "cpp",
+		"xtr1common": "cpp",
+		"xtree": "cpp"
 	}
 }
