Use '--line-filter' to exclude headers from clang-tidy instead of marking them as system headers
Signed-off-by: William So <polyipseity@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,7 @@ find_package(Microsoft.GSL 4.0.0 EXACT REQUIRED CONFIG)
 
 add_library(artccel INTERFACE)
 configure_file("in/config.h" "include/artccel/config.h")
-target_include_directories(artccel INTERFACE $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
-target_include_directories(artccel SYSTEM INTERFACE $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>)
+target_include_directories(artccel INTERFACE $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
 
 add_subdirectory(artccel-core)
 
