--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
-			"miDebuggerPath": "/path/to/gdb",
+			"miDebuggerPath": "",
 			"setupCommands": [
 				{
 					"description": "Enable pretty-printing for gdb",
