Improve CMake build scripts significantly
- Change minimum CMake version required to v3.14.
- Split big build scripts into smaller ones.
- Add options to control project behaviors when this project is included
  via 'add_subdirectory()'.
- Correctly handle behaviors when this project is included via
  'add_subdirectory()'.
- Prepend namespace 'artccel::' to exported targets.
- Add support for 'FetchContent' if the required packages are not
  installed.

Signed-off-by: William So <polyipseity@gmail.com>

--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.14)
 project(artccel-core VERSION 1.0.0 LANGUAGES C CXX)
-set(ROOT_DIR "${PROJECT_SOURCE_DIR}/../")
+set(ROOT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../")
 
-include("${ROOT_DIR}/build_auto/init.cmake")
+include("${ROOT_SOURCE_DIR}/build_auto/init.cmake")
 
 add_library(artccel-core SHARED
 	"sources/cerrno_extras.cpp"
@@ -17,16 +17,20 @@ add_library(artccel-core SHARED
 	"sources/polyfill.cpp"
 	"sources/reflect.cpp"
 	"sources/windows_error.cpp")
+add_library("${ARTCCEL_NAMESPACE}artccel-core" ALIAS artccel-core)
 configure_file("in/config.h" "include/artccel-core/config.h")
 generate_preset_export_header(artccel-core)
 target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
 target_link_libraries(artccel-core PUBLIC artccel Microsoft.GSL::GSL PRIVATE Threads::Threads)
 
 add_executable(artccel-core-exe "sources/exe/main.cpp")
+add_executable("${ARTCCEL_NAMESPACE}artccel-core-exe" ALIAS artccel-core-exe)
 target_link_libraries(artccel-core-exe artccel-core)
 
-include(GNUInstallDirs)
-install(TARGETS artccel-core artccel-core-exe EXPORT artccel-core-targets)
-install(DIRECTORY include/ "${PROJECT_BINARY_DIR}/include/" TYPE INCLUDE)
-install(EXPORT artccel-core-targets DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake")
-export(EXPORT artccel-core-targets FILE "Targets.cmake")
+if(ARTCCEL_INSTALL)
+	include(GNUInstallDirs)
+	install(TARGETS artccel-core artccel-core-exe EXPORT artccel-core-targets)
+	install(DIRECTORY include/ "${PROJECT_BINARY_DIR}/include/" TYPE INCLUDE)
+	install(EXPORT artccel-core-targets DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake")
+	export(EXPORT artccel-core-targets NAMESPACE "${ARTCCEL_NAMESPACE}" FILE "Targets.cmake")
+endif()
