--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(artccel-core SHARED
 	"sources/concurrent.cpp"
 	"sources/encoding.cpp"
 	"sources/enum_bitset.cpp"
+	"sources/error_handling.cpp"
 	"sources/geometry.cpp"
 	"sources/interval.cpp"
 	"sources/main_hooks.cpp"
