Move headers under 'artccel-core/' to 'artccel/core/'
Signed-off-by: William So <polyipseity@gmail.com>

--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -19,8 +19,8 @@ add_library(artccel-core SHARED
 	"sources/reflect.cpp"
 	"sources/windows_error.cpp")
 add_library("${ARTCCEL_NAMESPACE}artccel-core" ALIAS artccel-core)
-configure_file("in/config.h" "include/artccel-core/config.h")
-generate_preset_export_header(artccel-core)
+configure_file("in/config.h" "include/artccel/core/config.h")
+generate_preset_export_header(artccel-core "include/artccel/core/export.h")
 target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
 target_link_libraries(artccel-core PUBLIC artccel Microsoft.GSL::GSL tl-expected::expected PRIVATE Threads::Threads)
 
