--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,8 @@
 		"xstddef": "cpp",
 		"xtr1common": "cpp",
 		"xtree": "cpp",
-		"set": "cpp"
+		"set": "cpp",
+		"complex": "cpp",
+		"regex": "cpp"
 	}
 }
