--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -33,7 +33,7 @@ add_sanitizers(artccel-core-exe)
 if(ARTCCEL_INSTALL)
 	include(GNUInstallDirs)
 	install(TARGETS artccel-core artccel-core-exe EXPORT artccel-core-targets)
-	install(DIRECTORY include/ "${PROJECT_BINARY_DIR}/include/" TYPE INCLUDE)
-	install(EXPORT artccel-core-targets DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake")
-	export(EXPORT artccel-core-targets NAMESPACE "${ARTCCEL_NAMESPACE}" FILE "Targets.cmake")
+	install(DIRECTORY "include/" "${PROJECT_BINARY_DIR}/include/" TYPE INCLUDE)
+	install(EXPORT artccel-core-targets DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" NAMESPACE "${ARTCCEL_NAMESPACE}")
+	export(EXPORT artccel-core-targets NAMESPACE "${ARTCCEL_NAMESPACE}")
 endif()
