Make running clang-tidy optional
Signed-off-by: William So <polyipseity@gmail.com>

--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -25,6 +25,7 @@ target_precompile_headers(artccel-core PRIVATE "include/artccel/core/precompile.
 target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
 target_link_libraries(artccel-core PUBLIC artccel PRIVATE artccel-private)
 add_sanitizers(artccel-core)
+target_integrate_clang_tidy(artccel-core CXX "")
 
 add_executable(artccel-core-exe "sources/exe/main.cpp")
 add_executable("${ARTCCEL_NAMESPACE}artccel-core-exe" ALIAS artccel-core-exe)
@@ -32,6 +33,7 @@ get_target_property(artccel-core_PRECOMPILE_HEADERS artccel-core PRECOMPILE_HEAD
 target_precompile_headers(artccel-core-exe PRIVATE ${artccel-core_PRECOMPILE_HEADERS})
 target_link_libraries(artccel-core-exe artccel-core)
 add_sanitizers(artccel-core-exe)
+target_integrate_clang_tidy(artccel-core-exe CXX "")
 
 if(ARTCCEL_INSTALL)
 	include(GNUInstallDirs)
