--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -22,7 +22,10 @@ add_library("${ARTCCEL_NAMESPACE}artccel-core" ALIAS artccel-core)
 configure_file("in/config.h" "include/artccel/core/config.h")
 generate_preset_export_header(artccel-core "include/artccel/core/export.h")
 target_precompile_headers(artccel-core PRIVATE "include/artccel/core/precompile.h")
-target_include_directories(artccel-core PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include> $<INSTALL_INTERFACE:include>)
+target_include_directories(artccel-core PUBLIC
+	"$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+	"$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>"
+	"$<INSTALL_INTERFACE:include>")
 target_link_libraries(artccel-core PUBLIC artccel PRIVATE artccel-private)
 add_sanitizers(artccel-core)
 target_integrate_clang_tidy(artccel-core CXX "")
