Make 'target_integrate_clang_tidy()' use target arguments
- Create target 'clang-tidy' to run all clang-tidy targets.

Signed-off-by: William So <polyipseity@gmail.com>

--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -28,7 +28,7 @@ target_include_directories(artccel-core PUBLIC
 	"$<INSTALL_INTERFACE:include>")
 target_link_libraries(artccel-core PUBLIC artccel PRIVATE artccel-private)
 add_sanitizers(artccel-core)
-target_integrate_clang_tidy(artccel-core CXX "")
+target_integrate_clang_tidy(artccel-core CXX "" "")
 
 add_executable(artccel-core-exe "sources/exe/main.cpp")
 add_executable("${ARTCCEL_NAMESPACE}artccel-core-exe" ALIAS artccel-core-exe)
@@ -36,7 +36,7 @@ get_target_property(artccel-core_PRECOMPILE_HEADERS artccel-core PRECOMPILE_HEAD
 target_precompile_headers(artccel-core-exe PRIVATE ${artccel-core_PRECOMPILE_HEADERS})
 target_link_libraries(artccel-core-exe artccel-core)
 add_sanitizers(artccel-core-exe)
-target_integrate_clang_tidy(artccel-core-exe CXX "")
+target_integrate_clang_tidy(artccel-core-exe CXX "" "")
 
 if(ARTCCEL_INSTALL)
 	include(GNUInstallDirs)
