--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,6 +112,7 @@
 		"complex": "cpp",
 		"regex": "cpp",
 		"any": "cpp",
-		"unordered_set": "cpp"
+		"unordered_set": "cpp",
+		"cerrno": "cpp"
 	}
 }
