Defend against 'NOTFOUND' in CMake build
Signed-off-by: William So <polyipseity@gmail.com>

--- a/artccel-core/CMakeLists.txt
+++ b/artccel-core/CMakeLists.txt
@@ -33,6 +33,11 @@ target_integrate_clang_tidy(artccel-core CXX "" "")
 add_executable(artccel-core-exe "sources/exe/main.cpp")
 add_executable("${ARTCCEL_NAMESPACE}artccel-core-exe" ALIAS artccel-core-exe)
 get_target_property(artccel-core_PRECOMPILE_HEADERS artccel-core PRECOMPILE_HEADERS)
+
+if(artccel-core_PRECOMPILE_HEADERS STREQUAL "NOTFOUND")
+	set(artccel-core_PRECOMPILE_HEADERS "")
+endif()
+
 target_precompile_headers(artccel-core-exe PRIVATE ${artccel-core_PRECOMPILE_HEADERS})
 target_link_libraries(artccel-core-exe artccel-core)
 add_sanitizers(artccel-core-exe)
