--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,7 @@
 		"regex": "cpp",
 		"any": "cpp",
 		"unordered_set": "cpp",
-		"cerrno": "cpp"
+		"cerrno": "cpp",
+		"expected": "cpp"
 	}
 }
