--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -114,7 +114,8 @@
 		"any": "cpp",
 		"unordered_set": "cpp",
 		"cerrno": "cpp",
-		"expected": "cpp"
+		"expected": "cpp",
+		"stack": "cpp"
 	},
 	"formatFiles.excludedFolders": [
 		".git",
