Prefix CMake target names with a customizable namespace
Signed-off-by: William So <polyipseity@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,30 +4,30 @@ set(ROOT_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
 
 include("${ROOT_SOURCE_DIR}/build_auto/init.cmake")
 
-add_library(artccel INTERFACE)
-add_library("${ARTCCEL_NAMESPACE}artccel" ALIAS artccel)
+add_library("${ARTCCEL_TARGET_NAMESPACE}" INTERFACE)
+add_library("${ARTCCEL_EXPORT_NAMESPACE}${ARTCCEL_TARGET_NAMESPACE}" ALIAS "${ARTCCEL_TARGET_NAMESPACE}")
 configure_file("in/config.h" "include/artccel/config.h" @ONLY)
-target_include_directories(artccel INTERFACE
+target_include_directories("${ARTCCEL_TARGET_NAMESPACE}" INTERFACE
 	"$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
 	"$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>"
 	"$<INSTALL_INTERFACE:include>")
-target_link_libraries(artccel INTERFACE
+target_link_libraries("${ARTCCEL_TARGET_NAMESPACE}" INTERFACE
 	Microsoft.GSL::GSL
 	Threads::Threads
 	ofats::any_invocable
 	tl-expected::expected)
 
-add_library(artccel-private INTERFACE)
-target_precompile_headers(artccel-private INTERFACE "include/artccel/precompile.h")
+add_library("${ARTCCEL_TARGET_NAMESPACE}-private" INTERFACE)
+target_precompile_headers("${ARTCCEL_TARGET_NAMESPACE}-private" INTERFACE "include/artccel/precompile.h")
 
 add_subdirectory(artccel-core)
 
 if(ARTCCEL_INSTALL)
 	include(GNUInstallDirs)
-	install(TARGETS artccel EXPORT artccel-targets)
+	install(TARGETS "${ARTCCEL_TARGET_NAMESPACE}" EXPORT "${ARTCCEL_TARGET_NAMESPACE}-targets")
 	install(DIRECTORY "include/" "${PROJECT_BINARY_DIR}/include/" TYPE INCLUDE)
-	install(EXPORT artccel-targets DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" NAMESPACE "${ARTCCEL_NAMESPACE}")
-	export(EXPORT artccel-targets NAMESPACE "${ARTCCEL_NAMESPACE}")
+	install(EXPORT "${ARTCCEL_TARGET_NAMESPACE}-targets" DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" NAMESPACE "${ARTCCEL_NAMESPACE}")
+	export(EXPORT "${ARTCCEL_TARGET_NAMESPACE}-targets" NAMESPACE "${ARTCCEL_EXPORT_NAMESPACE}")
 
 	include(CMakePackageConfigHelpers)
 	configure_package_config_file(
